--- a/src/app/modules/FeesManagement/MasterData/add-master-data/add-master-data.component.scss
+++ b/src/app/modules/FeesManagement/MasterData/add-master-data/add-master-data.component.scss
@@ -31,10 +31,10 @@ mat-checkbox {
 }
 
 button {
-    margin : 5px;
+ //   margin : 5px;
     outline: none;
 }
 
-mat-form-field {
-    margin-right: 15px;
-}
+// mat-form-field.mat-form-field {
+//     width: 100%;
+//   }
