--- a/src/app/modules/FeesManagement/excel-data-management/excel-data-management.component.html
+++ b/src/app/modules/FeesManagement/excel-data-management/excel-data-management.component.html
@@ -9,29 +9,37 @@
                         placeholder="Upload file" accept=".xlsx">
                 </div>
                 <span fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-                    <span>
-                        <mat-form-field appearance="outline">
-                            <mat-label>Upload For</mat-label>
-                            <mat-select formControlName="UploadTypeId" (selectionChange)="onselectchange($event)">
-                                <mat-option value="0">---</mat-option>
-                                <mat-option *ngFor="let p of UploadTypes" [value]="p.MasterDataId">
-                                    {{p.MasterDataName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </span>
                     <span>{{selectedFile}}</span>
                     <button class="mat-raised-button" matTooltip="select file" color="primary"
                         (click)="inputfile.click()">
                         <mat-icon aria-label="photo">attach_file</mat-icon>
-                    </button>&nbsp;&nbsp;
+                    </button>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Batch</mat-label>
+                        <mat-select formControlName="BatchId" #Class>
+                            <mat-option value="0">---</mat-option>
+                            <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
+                                {{p.MasterDataName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Upload For</mat-label>
+                        <mat-select formControlName="UploadTypeId" (selectionChange)="onselectchange($event)">
+                            <mat-option value="0">---</mat-option>
+                            <mat-option *ngFor="let p of UploadTypes" [value]="p.MasterDataId">
+                                {{p.MasterDataName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    
                     <button type="submit" (click)="readAsJson()" matTooltip="upload file" class="mat-raised-button">
                         <mat-icon aria-label="file_upload">file_upload</mat-icon>
                     </button>&nbsp;&nbsp;
                 </span>
                 <mat-divider></mat-divider>
                 <span style="color:red" [innerHTML]="ErrorMessage">
-                                  </span>
+                </span>
                 <div *ngFor="let item of jsonData" fxLayout="row" fxLayoutAlign="space-between center">
                     <div>{{item.Name}}</div>
                     <div>{{item.FatherName}}</div>
