--- a/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
+++ b/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
@@ -2,7 +2,15 @@
     <mat-card-title>Student</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
-        <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="center center">
+        <form [formGroup]="searchForm" fxLayout="row wrap" fxLayoutAlign="center center">
+            <mat-form-field fxFlex appearance="outline">
+                <mat-label>Batch</mat-label>
+                <mat-select formControlName="BatchId">
+                    <mat-option *ngFor="let master of Batches" [value]="master.MasterDataId">
+                        {{master.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Admission Id</mat-label>
                 <input formControlName="StudentId" autocomplete="Off" matInput maxlength="5">
@@ -26,32 +34,33 @@
                 <mat-icon>fiber_new</mat-icon>
             </button>
         </form>
+        <br>
         <div class="example-container mat-elevation-z8">
-            <mat-table #table [dataSource]="dataSource">
+            <mat-table #table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="StudentId" [style.width.px]="30">
                     <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
                     <mat-cell *matCellDef="let element"> {{element.StudentId}} </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Name">
-                    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.Name}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ClassName">
-                    <mat-header-cell *matHeaderCellDef> Class </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.ClassName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="FatherName">
-                    <mat-header-cell *matHeaderCellDef>Father's Name </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Father's Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.FatherName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MotherName">
-                    <mat-header-cell *matHeaderCellDef>Mother's Name </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Mother's Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.MotherName}}
                     </mat-cell>
@@ -74,6 +83,7 @@
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
             </mat-table>
+            <mat-paginator [pageSizeOptions]="[10,25,50]"></mat-paginator>
         </div>
     </mat-card-content>
     <mat-card-actions fxLayoutAlign="center center">
