--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,7 @@ input[type="radio"]{
     padding-bottom: .6em !important;
 }
 .mat-form-field-infix{
-    padding:1em !important;
+    padding-bottom:1em !important;
 }
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
